# Pokemon-Battle-Simulator

./: README.md  battle.py  main.py  moves.json  pokemon.py  pokemons.json  pyproject.toml  setup.py
pokemon-sim/: battle.py  pokemon.py
pokemon-sim/data/: moves.json  pokemons.json
pokemon_sim.egg-info/: PKG-INFO  SOURCES.txt
