[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_metaages.find]` section:
```toml
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build"

[project]
name = "pokemon-battle-simulator"
_meta"

[project]
name = "pokemon-battle-simulator"
version = "1.0.3"
description = "A Python package forversion = "1.0.5"
description = "A Python package for simulating Pokemon battles."
authors = [
    { name simulating Pokemon battles."
authors = [
    { = "Dreamsever", email = "your.email@example.com" name = "Dreamsever", email = "your.email@example.com" }
]
license = { text = "MIT" }

[tool.setuptools]
 }
]
license = { text = "MIT" }

[tool.setuptools]
# Use find to dynamically locate packages within# Specify packages explicitly
packages = ["main", " your project
packages = { find = {} }

[tool.setuptools.packages.find]
# Exclude test directories or other unwantedbattle", "pokemon"]
