[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pokemon-battle-simulator"
version = "0.1.0"
description = "A simple turn-based Pokémon battle simulator written in Python"
authors = [
  { name = "Dreamsever" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/Dreamsever/Pokemon-Battle-Simulator"
